# config

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  conf_bootstrap.yml  local.yml  makefile  project.mk  project.mk~  run.sh  setup.sh
old/emacs/: CMakeLists.txt
old/emacs/emacs.d/: main.el  modes.el  themes.el
old/emacs/emacs.d/config/: android_mode_conf.el  asm_mode_conf.el  haskell_mode_conf.el
old/emacs/emacs.d/elpa/android-mode-20140421.540/: android-mode-autoloads.el  android-mode-pkg.elc  android-mode.elc
old/emacs/emacs.d/elpa/gnupg/: trustdb.gpg
old/emacs/emacs.d/elpa/haskell-mode-20140928.332/: ghc-core.elc  haskell-align-imports.elc  haskell-bot.elc  haskell-c.elc  haskell-checkers.elc  haskell-complete-module.elc  haskell-debug.elc  haskell-decl-scan.elc  haskell-indentation.elc  haskell-interactive-mode.elc  haskell-menu.elc  haskell-mode-autoloads.el  haskell-mode.elc  haskell-mode.info  haskell-move-nested.elc  haskell-navigate-imports.elc  haskell-package.elc  haskell-presentation-mode.elc  haskell-process.elc  haskell-session.elc  haskell-show.elc  haskell-simple-indent.elc  haskell-sort-imports.elc  haskell-utils.elc  haskell-yas.elc  inf-haskell.elc
old/x11/: CMakeLists.txt  xresources.in  zenburn
shell/: CMakeLists.txt  zshrc  zshrc.in
shell/common/: arch.sh  arch.sh~  colors.zsh  fortune.sh  fortune.sh~  fortune.zsh.in  gen-screen.py  gen_screen.py  make_issue.sh  module.mk  stat.sh  stat.sh~  stat.zsh.in  test_gen_screen.py
shell/tools/: colortest.zsh
shell/zsh/: .zshrc~  module.mk  zshrc  zshrc~
(+165 files in other folders)
